tests/snapshots/file@method@missing_arguments.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  method(a, b) {}\n}\n\nFoo().method(1); // expect runtime error: Expected 2 arguments but got 1.\n"
input_file: crafting_interpreters_test_files/method/missing_arguments.lox
---
OUT: 

===
ERR: 
  × wrong number of arguments, expected 2, got 1
   ╭─[5:13]
 4 │ 
 5 │ Foo().method(1); // expect runtime error: Expected 2 arguments but got 1.
   ·             ┬
   ·             ╰── here
   ╰────
