tests/snapshots/file@number@decimal_point_at_eof.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at end: Expect property name after '.'.\n123."
input_file: crafting_interpreters_test_files/number/decimal_point_at_eof.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected Semicolon, found '.'
   ╭─[2:4]
 1 │ // [line 2] Error at end: Expect property name after '.'.
 2 │ 123.
   ·    ┬
   ·    ╰── here
   ╰────
