tests/snapshots/file@number@leading_dot.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at '.': Expect expression.\n.123;\n"
input_file: crafting_interpreters_test_files/number/leading_dot.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this', found '.'
   ╭─[2:1]
 1 │ // [line 2] Error at '.': Expect expression.
 2 │ .123;
   · ┬
   · ╰── here
   ╰────
