tests/snapshots/file@operator@add_bool_nil.lox.snap
---
source: tests/common/mod.rs
description: "true + nil; // expect runtime error: Operands must be two numbers or two strings.\n"
input_file: test_files/operator/add_bool_nil.lox
---
OUT: 

===
ERR: 
  × invalid operands, expected two numbers or string
   ╭────
 1 │ true + nil; // expect runtime error: Operands must be two numbers or two strings.
   ·      ┬
   ·      ╰── here
   ╰────
